more animations have been added

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 body {
-    background-color: pink;
+  animation-name: back;
+  animation-duration: 30s;
+  animation-iteration-count: 10;
 }
 
-img {
+#Mashimaro {
+  height: 220px;
   position: absolute;
   top: 300px;
   left: 500px;
   animation-name: floatUp;
-  animation-duration: 10s;
+  animation-duration: 20s;
   animation-iteration-count: 3;
 }
 @keyframes floatUp {
@@ -16,6 +19,20 @@ img {
     50%  {left:700px; top:500px;}
     75%  {left:500px; top:500px;}
     100% {left:500px; top:300px;}
+  }
+  @keyframes back{
+    0%  {background-color: pink;}
+    25% {background-color: rgb(194, 245, 178);}
+    50% {background-color: rgb(192, 248, 255);}
+    75% {background-color: rgb(239, 247, 171);}
+    100%{background-color: pink;}
+  }
+  @keyframes hover {
+    0%   {left:1000px; bottom:500px;}
+    25%  {left:1000px; bottom:480px;}
+    50%  {left:1000px; bottom:500px;}
+    75%  {left:1000px; bottom:490px;}
+    100% {left:1000px; bottom:500px;}
   }
 footer {
     position: absolute;
@@ -26,4 +43,20 @@ ul {
   position: absolute;
   left: 400px;
   bottom: 600px;
+}
+#Frame {
+  position: absolute;
+  height: 600px;
+  width: 800px;
+  top: 210px;
+  left: 300px;
+}
+#Clouds {
+  position: absolute;
+  height: 500px;
+  bottom: 600px;
+  left: 1000px;
+  animation-name: hover;
+  animation-duration: 20s;
+  animation-iteration-count: 10;
 }
